# src/main/java/ru/planet/feedback/dto/CreateFeedbackDto.java
@@ -1,0 +1,4 @@
+package ru.planet.feedback.dto;
+
+public record CreateFeedbackDto(long hotelId, long userId, String body, int mark) {
+}
