# src/main/java/ru/planet/feedback/dto/UpdateFeedbackDto.java
@@ -1,0 +1,4 @@
+package ru.planet.feedback.dto;
+
+public record UpdateFeedbackDto (String body, int mark){
+}
